fix: syntax token contrast in Everforest dark theme

--- a/_sass/_syntax_everforest.scss
+++ b/_sass/_syntax_everforest.scss
@@ -1,11 +1,11 @@
 /* 
 #2D353B  background
-#859289  comments / secondary content
+#9baab0  comments / secondary content
 #D3C6AA  body text / default code / primary content
 #83C092  constants
 #DBBC7F  regex, special keywords
 #7FBBB3  reserved keywords
-#2aa198  strings, numbers
+#35b5ab  strings, numbers
 #E69875  operators, other keywords
 */
 
@@ -27,10 +27,10 @@
   padding: 0.5em;
 }
 .highlight .lineno {
-  color: #859289;
+  color: #9baab0;
 } /* Line Numbers */
 .highlight .c {
-  color: #859289;
+  color: #9baab0;
 } /* Comment */
 .highlight .err {
   color: #d3c6aa;
@@ -57,19 +57,19 @@
   color: #d3c6aa;
 } /* Punctuation */
 .highlight .cm {
-  color: #859289;
+  color: #9baab0;
 } /* Comment.Multiline */
 .highlight .cp {
   color: #e69875;
 } /* Comment.Preproc */
 .highlight .c1 {
-  color: #859289;
+  color: #9baab0;
 } /* Comment.Single */
 .highlight .cs {
   color: #e69875;
 } /* Comment.Special */
 .highlight .gd {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Generic.Deleted */
 .highlight .ge {
   color: #d3c6aa;
@@ -122,16 +122,16 @@
   color: #d3c6aa;
 } /* Literal.Date */
 .highlight .m {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.Number */
 .highlight .s {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.String */
 .highlight .na {
   color: #d3c6aa;
 } /* Name.Attribute */
 .highlight .nb {
-  color: #b58900;
+  color: #c99b00;
 } /* Name.Builtin */
 .highlight .nc {
   color: #7fbbb3;
@@ -176,28 +176,28 @@
   color: #d3c6aa;
 } /* Text.Whitespace */
 .highlight .mf {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.Number.Float */
 .highlight .mh {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.Number.Hex */
 .highlight .mi {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.Number.Integer */
 .highlight .mo {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.Number.Oct */
 .highlight .sb {
-  color: #859289;
+  color: #9baab0;
 } /* Literal.String.Backtick */
 .highlight .sc {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.String.Char */
 .highlight .sd {
   color: #d3c6aa;
 } /* Literal.String.Doc */
 .highlight .s2 {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.String.Double */
 .highlight .se {
   color: #83c092;
@@ -206,19 +206,19 @@
   color: #d3c6aa;
 } /* Literal.String.Heredoc */
 .highlight .si {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.String.Interpol */
 .highlight .sx {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.String.Other */
 .highlight .sr {
   color: #dbbc7f;
 } /* Literal.String.Regex */
 .highlight .s1 {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.String.Single */
 .highlight .ss {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.String.Symbol */
 .highlight .bp {
   color: #7fbbb3;
@@ -233,5 +233,5 @@
   color: #7fbbb3;
 } /* Name.Variable.Instance */
 .highlight .il {
-  color: #2aa198;
+  color: #35b5ab;
 } /* Literal.Number.Integer.Long */
